tests/smoothy/iter/snapshots/smoothy__iter__any_match__fails__when_empty.snap
---
source: tests/smoothy/iter/any_match.rs
expression: assertion_failed_output
---
[31mAssertion failed![0m

Expected
  [31m[][0m
to have at least one element matching the predicate
